# Breakout

./: .gitignore  CMakeLists.txt  README.md
includes/: Ball.hpp  Blocks.hpp  Enemy.hpp  Game.hpp  MiscComponents.hpp  Player.hpp  PowerUps.hpp  Render.hpp  Utils.hpp
includes/Buffs/: Buffs.hpp  DisruptionBuff.hpp  EnlargeBuff.hpp  ExtraLifeBuff.hpp  LazersBuff.hpp  SlowBuff.hpp
resources/: crt_shader.fs
src/: Ball.cpp  Blocks.cpp  Enemy.cpp  Game.cpp  Player.cpp  PowerUps.cpp  Render.cpp  Utils.cpp  main.cpp
src/Buffs/: Buffs.cpp  DisruptionBuff.cpp  EnlargeBuff.cpp  ExtraLifeBuff.cpp  LazersBuff.cpp  SlowBuff.cpp
